# smart-legal-assistant-app

./: README.md  main.py  pyproject.toml  render.yaml  requirements.txt  secrets.toml
backend/: main.py
backend/config/: config.yaml
backend/experiments/: step_01_embeddings.py  step_02_retrieval.py  step_03_reranker.py  step_04_llms.py  step_05_response.py
backend/src/components/: embeddings.py  llm_service.py  reranker.py  response.py  retriever.py
backend/src/config_entity/: config_params.py
backend/src/config_settings/: config_manager.py
backend/src/constants/: __init__.py
backend/src/pipeline/: rag_pipeline.py
backend/src/prompt_template/: cot_prompt_template.py
backend/src/utils/: common.py  exception.py  logger.py
frontend/: .env.locals  app.py  requirements.txt
